welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: not found: value mark
mark()
^Program:3: error: not found: value mark
mark()
^Program:5: error: not found: value mark
mark()
^Program:8: error: not found: value mark
mark()
^Program:10: error: not found: value mark
mark()
^Program:13: error: not found: value mark
mark()
^Program:15: error: not found: value mark
mark()
^