welcome.lessons.welcome.instructions.Instructions.scala.code
mark()
forward()
mark()
forward()
mark()
right()
forward()
mark()
forward()
mark()
right()
forward()
mark()
forward()
mark()
right()
forward()
right()
forward()
